# gitlab-testplan-generator

./: CLAUDE.md  README.md  pyproject.toml
mcp-server/: .gitignore  analyze_mr.py  main.py  pyproject.toml  requirements.txt
mcp-server/config/: .env.example
mcp-server/docs/: README.md  SETUP_GUIDE.md
mcp-server/examples/: demo_analysis.py  example_usage.py  test_ollama.py
mcp-server/src/gitlab_mcp/: __init__.py  ai_service.py  analyzer.py  models.py  server.py  test_planner.py
