[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gitlab-testplan-generator"
version = "1.0.0"
description = "AI-powered GitLab UI test plan generator using MCP server and local Ollama models"
readme = "mcp-server/docs/README.md"
license = {text = "MIT"}
authors = [
    {name = "GitLab Test Plan Generator Team", email = "team@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8"
dependencies = [
    "mcp[cli]>=1.12.0",
    "python-gitlab>=4.0.0",
    "pydantic>=2.0.0",
    "aiohttp>=3.9.0",
    "python-dotenv>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/your-username/gitlab-testplan-generator"
Repository = "https://github.com/your-username/gitlab-testplan-generator"
Documentation = "https://github.com/your-username/gitlab-testplan-generator/tree/main/mcp-server/docs"

[tool.setuptools]
packages = ["gitlab_mcp"]

[tool.setuptools.packages.find]
where = ["mcp-server/src"] 