[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gitlab-mcp-server"
version = "2.0.0"
description = "An MCP server that generates UI test plans from a GitLab MR URL."
readme = "docs/README.md"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]
requires-python = ">=3.8"
dependencies = [
    "mcp[cli]>=1.12.0",
    "python-gitlab>=4.0.0",
    "pydantic>=2.0.0",
    "aiohttp>=3.9.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
gitlab-mcp-server = "gitlab_mcp.server:main"

[project.urls]
Homepage = "https://github.com/your-username/gitlab-mcp-server"
Repository = "https://github.com/your-username/gitlab-mcp-server"

[tool.setuptools]
packages = ["gitlab_mcp"]

[tool.setuptools.packages.find]
where = ["src"] 